fixed selecting text on accident on mobile :smile

--- a/style.css
+++ b/style.css
@@ -9,3 +9,11 @@ body {
 main {
   border-top-style: hidden;
 }
+
+/* Disable the select feature on divs */
+div {
+  -webkit-user-select: none; /* Safari 3.1+ */
+  -moz-user-select: none; /* Firefox 2+ */
+  -ms-user-select: none; /* IE 10+ */
+  user-select: none; /* Standard syntax */
+  }
